# oreo

./: .envrc  .gitignore  .gitmodules  CNAME  README.org  a.hy  b.hy  d.hy  default.nix  flake.nix  index.html  index.org  makefile  nix.org  pyproject.toml  setup.py  shell.nix  shell.org  shell2.nix  test.hy  tests.hy  tests.org  valiant.yaml
cookies/: 00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  README.md  makefile
deprecated/: __init__.py  _check_type.py  _command.py  _option_string.py  _trim.py
oreo/: __init__.org  __init__.py  _colorize.py  _option_string.py  _peek.py  deprecated.org.bak  eclair.py  gensing.py  hy.hy  multi.py  option.py  oreo.hy  oreo.org  passwords.py  py.py
tests/: conftest.py  test-eclair.hy  test-either?.hy  test-first-last-n.hy  test-flatten.hy  test-gensing.hy  test-let-cwd.hy  test-ls.hy  test-remove-prefix-suffix-n.hy  test-with-cwd.hy  test_either?.py  test_first_last_n.py  test_flatten.py  test_gensing.py  test_ls.py  test_ls_with.hy  test_multi.py  test_palindromes.py  test_remove_prefix_suffix_n.py  test_un_mangle.hy
