[tool.poetry]
name = "oreo"
version = "1.0.0.0"
description = "The Stuffing for Other Functions!"
authors = ["sylvorg <jeet.ray@syvl.org>"]
license = "OREO"
include = [
	"oreo/**/*.py",
	"oreo/**/*.hy",
]

[tool.poetry.dependencies]
python = "^3.9"
addict = "*"
autoslot = "*"
click = "*"
hy = "^0.24.0"
hyrule = "^0.2"
nixpkgs = "*"
more-itertools = "*"
rich = { git = "https://github.com/syvlorg/rich.git", branch = "master" }
toolz = "*"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
poetry = "*"
poetry2setup = "*"
pytest-hy = "*"
pytest-randomly = "*"
pytest-parametrized = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
	"--strict-markers",
]
markers = [
	"either",
	"first_last_n",
	"flatten",
	"gensing",
	"let_cwd",
	"ls",
	"remove_prefix_n",
	"remove_suffix_n",
	"with_cwd",
    "eclair",
]
